apm/nginx-php-mariadb/mariadb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-ludo
  labels:
   app: db
   version: '2'
spec:
  containers:
  - image: mariadb
    name: mariadb
