apm/nginx-php-mariadb/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: forma-ludo
  labels:
    app: db
spec:
  ports:
    - port: 3306
  selector:
    app: db
