apm/nginx-php-mariadb/php-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: php
  namespace: forma-ludo
  labels:
    tier: backend
spec:
  selector:
    app: php
    tier: backend
  ports:
  - protocol: TCP
    port: 9000
