apm/nginx-php-mariadb/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-php
  namespace: forma-ludo
spec:
  ingressClassName: nginx
  rules:
    - host: monapp.ludovic.tech
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
