apm/nginx-php-mariadb/nginxDefaultBackendIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
    - host: formation.ludovic.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
